# brandenburg

./: .bandit  .dockerignore  .flake8  .gcloudignore  .gitignore  Dockerfile  Dockerfile.dev  Pipfile  Procfile  README.md  Taskfile  conftest.py  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  serverless.yml  setup.cfg  setup.py
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: codeql-analysis.yml  pythonpackage.yml
brandenburg/: __init__.py  auth.py  config.py  interfaces.py  main.py  strategies.py
brandenburg/brokers/: aws.py  email.py  salesforce.py
brandenburg/models/: batch.py  lead.py  notify.py
brandenburg/providers/: aws.py  gcp.py
brandenburg/routers/: imports.py  leads.py  notify.py
brandenburg/services/: batch.py  email.py  lead.py  marketing.py  publisher.py  sms.py  whatsapp.py
brandenburg/toolbox/: decorators.py  funcs.py  logger.py
brandenburg/toolbox/_backends/: base.py  redis.py
brandenburg/tubes/: aws.py  salesforce.py  zenvia.py
docs/: DEV.md  HEROKU.md
examples/: mail_template.html  sms_template.txt
platform/docker/: docker-compose.yml
script/: deploy  prepare_gcp  test
scripts/: bootstrap  deploy  server  setup  test
static/: script.js
tests/: test_config.py
tests/models/: test_batch_model.py  test_lead_model.py  test_notify_model.py
tests/routers/: test_imports_api.py  test_lead_api.py  test_notify_api.py
tests/services/: test_batch_service.py  test_lead_service.py
tests/toolbox/: test_funcs.py
